implemented stroke force feature extraction

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,9 @@
       "(127, 7)\n",
       "(127, 480, 640, 3)\n",
       "(127,)\n",
+      "Force keys <KeysViewHDF5 ['time_stamp', 'wrench']>\n",
+      "(36771,)\n",
+      "(36771, 3)\n",
       "Voxels Removed keys <KeysViewHDF5 ['time_stamp', 'voxel_color', 'voxel_removed']>\n",
       "(13657,)\n",
       "(13657, 4)\n",
@@ -75,6 +78,11 @@
     "# print('Metadata keys', meta.keys())\n",
     "# print((meta['README'][()]))\n",
     "\n",
+    "force = f['force']\n",
+    "print('Force keys', force.keys())\n",
+    "print((force['time_stamp'][()]).shape)\n",
+    "print((force['wrench'][()]).shape)\n",
+    "\n",
     "v_rm = f['voxels_removed']\n",
     "print('Voxels Removed keys', v_rm.keys())\n",
     "print((v_rm['time_stamp'][()]).shape)\n",
@@ -102,19 +110,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def get_strokes(stream: np.ndarray, timepts: np.ndarray, k=2):\n",
+    "def get_strokes(stream: np.ndarray, timepts: np.ndarray, k=6):\n",
     "    stream = stream[:, :3]\n",
     "    X_P = []\n",
     "\n",
@@ -144,9 +281,61 @@
     "\n",
     "    F_c = [1 if x_P > mu + sig else 0 for x_P in X_P]\n",
     "\n",
-    "    print(sum(F_c))\n",
+    "    j = 0\n",
+    "    for i in range(1, len(F_c)):\n",
+    "        if F_c[i] == 1 and F_c[i-1] == 0:\n",
+    "            j += 1\n",
+    "        elif F_c[i] == 1 and j != 0:\n",
+    "            j += 1\n",
+    "        elif F_c[i] == 0 and j != 0:\n",
+    "            ind = math.floor(j/2)\n",
+    "            F_c[i-j:i] = [0] * j\n",
+    "            F_c[i-ind] = 1\n",
+    "            j = 0\n",
+    "            \n",
+    "\n",
+    "    return F_c\n",
     "\n",
     "get_strokes((data['pose_mastoidectomy_drill'][()]), (data['time'][()]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.09073697352107028, 0.0, 0.27221092056321083)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def stroke_force(stream: np.ndarray, timepts: np.ndarray,\n",
+    "                force_stream: np.ndarray, force_times: np.ndarray, k=2):\n",
+    "\n",
+    "    strokes = get_strokes(stream, timepts, k)\n",
+    "    stroke_times = np.insert(timepts[[s == 1 for s in strokes]], 0, min(timepts))\n",
+    "\n",
+    "    avg_stroke_force = []\n",
+    "    for i in range(sum(strokes)):\n",
+    "        stroke_mask = [ft >= stroke_times[i] and ft < stroke_times[i+1] for ft in force_times]\n",
+    "        stroke_forces = np.linalg.norm(force_stream[stroke_mask], axis=1)\n",
+    "        avg_stroke_force.append(np.mean(stroke_forces))\n",
+    "\n",
+    "    mean = np.mean(avg_stroke_force)\n",
+    "    med_ = np.median(avg_stroke_force)\n",
+    "    max_ = np.max(avg_stroke_force)\n",
+    "\n",
+    "    return mean, med_, max_\n",
+    "    \n",
+    "\n",
+    "stroke_force(data['pose_mastoidectomy_drill'][()], data['time'][()], force['wrench'][()], force['time_stamp'][()])"
    ]
   }
  ],
