--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -110,146 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 1,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_strokes(stream: np.ndarray, timepts: np.ndarray, k=6):\n",
     "    stream = stream[:, :3]\n",
@@ -274,6 +137,7 @@
     "    sig = np.std(X_P)\n",
     "\n",
     "    for i in range(k):\n",
+    "        \n",
     "        X_P.insert(0, mu)\n",
     "        X_P.append(mu)\n",
     "\n",
@@ -283,6 +147,7 @@
     "\n",
     "    j = 0\n",
     "    for i in range(1, len(F_c)):\n",
+    "\n",
     "        if F_c[i] == 1 and F_c[i-1] == 0:\n",
     "            j += 1\n",
     "        elif F_c[i] == 1 and j != 0:\n",
@@ -296,7 +161,8 @@
     "\n",
     "    return F_c\n",
     "\n",
-    "get_strokes((data['pose_mastoidectomy_drill'][()]), (data['time'][()]))"
+    "strokes = get_strokes((data['pose_mastoidectomy_drill'][()]), (data['time'][()]))\n",
+    "stroke_times = np.insert(timepts[[s == 1 for s in strokes]], 0, min(timepts))"
    ]
   },
   {
@@ -316,14 +182,12 @@
     }
    ],
    "source": [
-    "def stroke_force(stream: np.ndarray, timepts: np.ndarray,\n",
-    "                force_stream: np.ndarray, force_times: np.ndarray, k=2):\n",
-    "\n",
-    "    strokes = get_strokes(stream, timepts, k)\n",
-    "    stroke_times = np.insert(timepts[[s == 1 for s in strokes]], 0, min(timepts))\n",
+    "def stroke_force(strokes: np.ndarray, stroke_times: np.ndarray,\n",
+    "                force_stream: np.ndarray, force_times: np.ndarray):\n",
     "\n",
     "    avg_stroke_force = []\n",
     "    for i in range(sum(strokes)):\n",
+    "\n",
     "        stroke_mask = [ft >= stroke_times[i] and ft < stroke_times[i+1] for ft in force_times]\n",
     "        stroke_forces = np.linalg.norm(force_stream[stroke_mask], axis=1)\n",
     "        avg_stroke_force.append(np.mean(stroke_forces))\n",
@@ -336,6 +200,47 @@
     "    \n",
     "\n",
     "stroke_force(data['pose_mastoidectomy_drill'][()], data['time'][()], force['wrench'][()], force['time_stamp'][()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.674532730900116e-05, 3.674532730900116e-05, 3.674532730900116e-05)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def stroke_length(strokes: np.ndarray, stream: np.ndarray):\n",
+    "\n",
+    "    stream = stream[:, :3]\n",
+    "    \n",
+    "    lens = []\n",
+    "    for i in range(sum(strokes)):\n",
+    "        \n",
+    "        stroke_len = 0\n",
+    "        curr_stroke = stream[strokes]\n",
+    "        for j in range(1, len(curr_stroke)):\n",
+    "\n",
+    "            stroke_len += np.linalg.norm(curr_stroke[j-1] - curr_stroke[j])\n",
+    "\n",
+    "        lens.append(stroke_len)\n",
+    "\n",
+    "    mean = np.mean(lens)\n",
+    "    med_ = np.median(lens)\n",
+    "    max_ = np.max(lens)\n",
+    "\n",
+    "    return mean, med_, max_\n",
+    "\n",
+    "stroke_length(np.array(strokes), data['pose_mastoidectomy_drill'][()])"
    ]
   }
  ],
