implemented bone removal rate feature extraction

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,33 +150,48 @@
     "\n",
     "        if F_c[i] == 1 and F_c[i-1] == 0:\n",
     "            j += 1\n",
-    "        elif F_c[i] == 1 and j != 0:\n",
-    "            j += 1\n",
-    "        elif F_c[i] == 0 and j != 0:\n",
+    "        elif sum(F_c[i:i+k]) == 0 and j != 0:\n",
     "            ind = math.floor(j/2)\n",
     "            F_c[i-j:i] = [0] * j\n",
     "            F_c[i-ind] = 1\n",
     "            j = 0\n",
-    "            \n",
+    "        elif j != 0:\n",
+    "            j += 1\n",
     "\n",
     "    return F_c\n",
     "\n",
     "strokes = get_strokes((data['pose_mastoidectomy_drill'][()]), (data['time'][()]))\n",
+    "timepts = data['time'][()]\n",
     "stroke_times = np.insert(timepts[[s == 1 for s in strokes]], 0, min(timepts))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stats_per_stroke(stroke_arr: np.ndarray):\n",
+    "    \n",
+    "    mean = np.mean(stroke_arr)\n",
+    "    med_ = np.median(stroke_arr)\n",
+    "    max_ = np.max(stroke_arr)\n",
+    "\n",
+    "    return mean, med_, max_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.09073697352107028, 0.0, 0.27221092056321083)"
+       "array([0.        , 0.        , 0.09622728])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,28 +207,24 @@
     "        stroke_forces = np.linalg.norm(force_stream[stroke_mask], axis=1)\n",
     "        avg_stroke_force.append(np.mean(stroke_forces))\n",
     "\n",
-    "    mean = np.mean(avg_stroke_force)\n",
-    "    med_ = np.median(avg_stroke_force)\n",
-    "    max_ = np.max(avg_stroke_force)\n",
-    "\n",
-    "    return mean, med_, max_\n",
+    "    return np.array(avg_stroke_force)\n",
     "    \n",
     "\n",
-    "stroke_force(data['pose_mastoidectomy_drill'][()], data['time'][()], force['wrench'][()], force['time_stamp'][()])"
+    "stroke_force(strokes, stroke_times, force['wrench'][()], force['time_stamp'][()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3.674532730900116e-05, 3.674532730900116e-05, 3.674532730900116e-05)"
+       "array([2.20471964e-05, 2.20471964e-05, 2.20471964e-05])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,13 +245,42 @@
     "\n",
     "        lens.append(stroke_len)\n",
     "\n",
-    "    mean = np.mean(lens)\n",
-    "    med_ = np.median(lens)\n",
-    "    max_ = np.max(lens)\n",
-    "\n",
-    "    return mean, med_, max_\n",
+    "    return np.array(lens)\n",
     "\n",
     "stroke_length(np.array(strokes), data['pose_mastoidectomy_drill'][()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0000000e+00, 0.0000000e+00, 2.9640957e+08])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def bone_removal_rate(strokes: np.ndarray, stroke_times: np.ndarray,\n",
+    "                        stream: np.ndarray, voxel_times: np.ndarray):\n",
+    "    \n",
+    "    vox_rm = []\n",
+    "    for i in range(sum(strokes)):\n",
+    "\n",
+    "        stroke_voxels = [vt >= stroke_times[i] and vt < stroke_times[i+1] for vt in voxel_times]\n",
+    "        vox_rm.append(sum(stroke_voxels))\n",
+    "\n",
+    "    rate = np.divide(np.array(vox_rm), stroke_length(strokes, stream))\n",
+    "\n",
+    "    return rate\n",
+    "\n",
+    "bone_removal_rate(strokes, stroke_times, data['pose_mastoidectomy_drill'][()], v_rm['time_stamp'][()])"
    ]
   }
  ],
