implemented procedure duration feature extraction

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -158,11 +158,11 @@
     "        elif j != 0:\n",
     "            j += 1\n",
     "\n",
-    "    return F_c\n",
+    "    st = np.insert(timepts[[s == 1 for s in F_c]], 0, min(timepts))\n",
     "\n",
-    "strokes = get_strokes((data['pose_mastoidectomy_drill'][()]), (data['time'][()]))\n",
-    "timepts = data['time'][()]\n",
-    "stroke_times = np.insert(timepts[[s == 1 for s in strokes]], 0, min(timepts))"
+    "    return F_c, st\n",
+    "\n",
+    "strokes, stroke_times = get_strokes(data['pose_mastoidectomy_drill'][()], data['time'][()])"
    ]
   },
   {
@@ -281,6 +281,29 @@
     "    return rate\n",
     "\n",
     "bone_removal_rate(strokes, stroke_times, data['pose_mastoidectomy_drill'][()], v_rm['time_stamp'][()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.614747524261475"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def procedure_duration(timepts):\n",
+    "    return (max(timepts) - min(timepts))\n",
+    "\n",
+    "procedure_duration(data['time'][()])"
    ]
   }
  ],
