debug drill orientation; still doesn't work

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -29,7 +29,10 @@
     "\n",
     "# fname = 'd4/20220302_131424.hdf5'\n",
     "# fname = '20220408_191041.hdf5'\n",
-    "fname = '20220408_210049.hdf5'\n",
+    "# fname = '20220408_210049.hdf5' # 3 strokes\n",
+    "# fname = '20220409_184944.hdf5' # perpendicular drill angle\n",
+    "fname = '20220409_185037.hdf5' # varying drill angle\n",
+    "\n",
     "f = h5py.File(fname, 'r')\n",
     "print('File keys', f.keys())\n",
     "print(type(f))"
@@ -45,16 +48,16 @@
      "output_type": "stream",
      "text": [
       "Data keys <KeysViewHDF5 ['depth', 'l_img', 'pose_main_camera', 'pose_mastoidectomy_drill', 'r_img', 'segm', 'time']>\n",
-      "(127, 7)\n",
-      "(127, 480, 640, 3)\n",
-      "(127,)\n",
+      "(100, 7)\n",
+      "(100, 480, 640, 3)\n",
+      "(100,)\n",
       "Force keys <KeysViewHDF5 ['time_stamp', 'wrench']>\n",
-      "(36771,)\n",
-      "(36771, 3)\n",
+      "(43882,)\n",
+      "(43882, 3)\n",
       "Voxels Removed keys <KeysViewHDF5 ['time_stamp', 'voxel_color', 'voxel_removed']>\n",
-      "(13657,)\n",
-      "(13657, 4)\n",
-      "(13657, 3)\n",
+      "(20057,)\n",
+      "(20057, 4)\n",
+      "(20057, 3)\n",
       "True\n"
      ]
     }
@@ -189,7 +192,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.        , 0.        , 0.09622728])"
+       "array([0.23464485, 0.61514681, 0.47998663])"
       ]
      },
      "execution_count": 5,
@@ -222,7 +225,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1.96817789e-05, 3.67763321e-02, 7.00008367e-02])"
+       "array([0.12272328, 0.11159843, 0.0228806 ])"
       ]
      },
      "execution_count": 6,
@@ -259,7 +262,7 @@
     {
      "data": {
       "text/plain": [
-       "array([    0.        ,     0.        , 93356.02700918])"
+       "array([ 18855.4288647 ,  96461.92971425, 250212.00467123])"
       ]
      },
      "execution_count": 7,
@@ -292,7 +295,7 @@
     {
      "data": {
       "text/plain": [
-       "36.614747524261475"
+       "43.95865249633789"
       ]
      },
      "execution_count": 8,
@@ -313,53 +316,61 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.689006273632835\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[180.0,\n",
-       " 51.064786522227216,\n",
-       " 180.0,\n",
-       " 180.0,\n",
-       " 0.0,\n",
-       " 180.0,\n",
-       " 0.0,\n",
-       " 180.0,\n",
-       " 0.0,\n",
-       " 101.52444166734192,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 180.0,\n",
-       " 130.94722314347294,\n",
-       " 79.50457156657468,\n",
-       " 67.61182659946205,\n",
-       " 180.0,\n",
-       " 104.11339459021092,\n",
-       " 157.03599338687937,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 140.42919531472091,\n",
-       " 180.0,\n",
-       " 0.0,\n",
-       " 84.34180723971694,\n",
-       " 127.55534653326345,\n",
-       " 9.219947579692562,\n",
-       " 0.0,\n",
-       " 180.0,\n",
-       " 87.34331644714727,\n",
-       " 102.42444430486675,\n",
-       " 154.65535471440052,\n",
-       " 122.15377167386973,\n",
-       " 0.0,\n",
-       " 100.76877304404718,\n",
-       " 180.0,\n",
-       " 180.0,\n",
-       " 180.0,\n",
-       " 180.0,\n",
-       " 180.0,\n",
-       " 0.0,\n",
-       " 56.05059756633658,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 180.0]"
+       "[25.54635818587745,\n",
+       " 20.14645994662682,\n",
+       " 9.335613144616659,\n",
+       " 44.053876184728395,\n",
+       " 6.176036847103546,\n",
+       " 12.956087376926419,\n",
+       " 54.384082086796354,\n",
+       " 7.5409324423904,\n",
+       " 39.73540785162993,\n",
+       " 29.939695216746742,\n",
+       " 68.63760440357333,\n",
+       " 65.76027871718426,\n",
+       " 12.905140303660787,\n",
+       " 33.83526152658561,\n",
+       " 28.92871288732396,\n",
+       " 61.44644971508029,\n",
+       " 54.175627593654525,\n",
+       " 32.599772537673985,\n",
+       " 10.17910461146441,\n",
+       " 49.87239389955912,\n",
+       " 9.425798421241552,\n",
+       " 43.351086290617715,\n",
+       " 45.12050417293061,\n",
+       " 22.966739818060063,\n",
+       " 11.612575509173155,\n",
+       " 1.21415240874569,\n",
+       " 17.0208234730936,\n",
+       " 3.2655528277877863,\n",
+       " 34.5236899790975,\n",
+       " 29.50537673042242,\n",
+       " 25.837990924844703,\n",
+       " 14.66226286855236,\n",
+       " 18.797083608491576,\n",
+       " 8.325542759840332,\n",
+       " 8.066937632860515,\n",
+       " 45.4472570114344,\n",
+       " 7.622922806829919,\n",
+       " 14.712989908010329,\n",
+       " 35.444604886674924,\n",
+       " 12.101214004607755,\n",
+       " 74.98183513290186,\n",
+       " 52.240025922532396,\n",
+       " 14.222934632485135,\n",
+       " 17.103230922914335,\n",
+       " 23.671689545997154,\n",
+       " 60.29457090775958]"
       ]
      },
      "execution_count": 9,
@@ -395,19 +406,26 @@
     "            x1, y1, z1 = voxels[ind2]\n",
     "            x2, y2, z2 = voxels[ind3]\n",
     "\n",
-    "            ux, uy, uz = u = [x1-x0, y1-y0, z1-z0]\n",
-    "            vx, vy, vz = v = [x2-x0, y2-y0, z2-z0]\n",
+    "            ux, uy, uz = [x1-x0, y1-y0, z1-z0]\n",
+    "            vx, vy, vz = [x2-x0, y2-y0, z2-z0]\n",
     "\n",
     "            u_cross_v = [uy*vz-uz*vy, uz*vx-ux*vz, ux*vy-uy*vx]\n",
     "            normal = np.array(u_cross_v)\n",
+    "            # print(normal)\n",
+    "            normal = np.divide(normal, np.linalg.norm(normal))\n",
+    "            # print(R.from_quat(stream[i, 3:]).inv().apply(normal))\n",
     "\n",
-    "            pose = stream[i, :]\n",
+    "            v = R.from_quat(stream[i, 3:]).apply([0, 1, 0.5])\n",
+    "            v = np.divide(v, np.linalg.norm(v))\n",
+    "            # print(v)\n",
+    "            # print(voxels[ind])\n",
     "\n",
-    "            v = R.from_quat(pose[3:]).apply([0, 0, -0.5])\n",
+    "            angle = np.arccos(np.clip(np.dot(v, normal), -1.0, 1.0)) * (180/np.pi)\n",
+    "            if angle > 90:\n",
+    "                angle = 180 - angle\n",
+    "            angles.append(90 - angle)\n",
     "\n",
-    "            angle = np.arccos(np.clip(np.dot(v, normal), -1.0, 1.0))\n",
-    "            angles.append(angle * (180/np.pi))\n",
-    "\n",
+    "    print(np.mean(angles))\n",
     "    return angles\n",
     "\n",
     "drill_orientation(data['pose_mastoidectomy_drill'][()], data['time'][()], v_rm['voxel_removed'][()], v_rm['time_stamp'][()])"
