added Hisashi module

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -30,8 +30,8 @@
     "# fname = 'd4/20220302_131424.hdf5'\n",
     "# fname = '20220408_191041.hdf5'\n",
     "# fname = '20220408_210049.hdf5' # 3 strokes\n",
-    "# fname = '20220409_184944.hdf5' # perpendicular drill angle\n",
-    "fname = '20220409_185037.hdf5' # varying drill angle\n",
+    "fname = '20220409_184944.hdf5' # perpendicular drill angle\n",
+    "# fname = '20220409_185037.hdf5' # varying drill angle\n",
     "\n",
     "f = h5py.File(fname, 'r')\n",
     "print('File keys', f.keys())\n",
@@ -48,16 +48,16 @@
      "output_type": "stream",
      "text": [
       "Data keys <KeysViewHDF5 ['depth', 'l_img', 'pose_main_camera', 'pose_mastoidectomy_drill', 'r_img', 'segm', 'time']>\n",
-      "(100, 7)\n",
-      "(100, 480, 640, 3)\n",
-      "(100,)\n",
+      "(55, 7)\n",
+      "(55, 480, 640, 3)\n",
+      "(55,)\n",
       "Force keys <KeysViewHDF5 ['time_stamp', 'wrench']>\n",
-      "(43882,)\n",
-      "(43882, 3)\n",
+      "(36832,)\n",
+      "(36832, 3)\n",
       "Voxels Removed keys <KeysViewHDF5 ['time_stamp', 'voxel_color', 'voxel_removed']>\n",
-      "(20057,)\n",
-      "(20057, 4)\n",
-      "(20057, 3)\n",
+      "(17930,)\n",
+      "(17930, 4)\n",
+      "(17930, 3)\n",
       "True\n"
      ]
     }
@@ -192,7 +192,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.23464485, 0.61514681, 0.47998663])"
+       "array([0.0141889 , 1.08498163])"
       ]
      },
      "execution_count": 5,
@@ -225,7 +225,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.12272328, 0.11159843, 0.0228806 ])"
+       "array([0.07271474, 0.02876191])"
       ]
      },
      "execution_count": 6,
@@ -262,7 +262,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 18855.4288647 ,  96461.92971425, 250212.00467123])"
+       "array([  7247.49923434, 495516.48968547])"
       ]
      },
      "execution_count": 7,
@@ -295,7 +295,7 @@
     {
      "data": {
       "text/plain": [
-       "43.95865249633789"
+       "36.43322730064392"
       ]
      },
      "execution_count": 8,
@@ -319,58 +319,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.689006273632835\n"
+      "43.70829041431975\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[25.54635818587745,\n",
-       " 20.14645994662682,\n",
-       " 9.335613144616659,\n",
-       " 44.053876184728395,\n",
-       " 6.176036847103546,\n",
-       " 12.956087376926419,\n",
-       " 54.384082086796354,\n",
-       " 7.5409324423904,\n",
-       " 39.73540785162993,\n",
-       " 29.939695216746742,\n",
-       " 68.63760440357333,\n",
-       " 65.76027871718426,\n",
-       " 12.905140303660787,\n",
-       " 33.83526152658561,\n",
-       " 28.92871288732396,\n",
-       " 61.44644971508029,\n",
-       " 54.175627593654525,\n",
-       " 32.599772537673985,\n",
-       " 10.17910461146441,\n",
-       " 49.87239389955912,\n",
-       " 9.425798421241552,\n",
-       " 43.351086290617715,\n",
-       " 45.12050417293061,\n",
-       " 22.966739818060063,\n",
-       " 11.612575509173155,\n",
-       " 1.21415240874569,\n",
-       " 17.0208234730936,\n",
-       " 3.2655528277877863,\n",
-       " 34.5236899790975,\n",
-       " 29.50537673042242,\n",
-       " 25.837990924844703,\n",
-       " 14.66226286855236,\n",
-       " 18.797083608491576,\n",
-       " 8.325542759840332,\n",
-       " 8.066937632860515,\n",
-       " 45.4472570114344,\n",
-       " 7.622922806829919,\n",
-       " 14.712989908010329,\n",
-       " 35.444604886674924,\n",
-       " 12.101214004607755,\n",
-       " 74.98183513290186,\n",
-       " 52.240025922532396,\n",
-       " 14.222934632485135,\n",
-       " 17.103230922914335,\n",
-       " 23.671689545997154,\n",
-       " 60.29457090775958]"
+       "[60.06982213352367,\n",
+       " 36.0535513558694,\n",
+       " 41.586834681990396,\n",
+       " 39.028121782359435,\n",
+       " 59.30265529311631,\n",
+       " 32.010291031767814,\n",
+       " 52.5962530294683,\n",
+       " 69.20191800637078,\n",
+       " 5.516762644980361,\n",
+       " 14.280452608475898,\n",
+       " 23.094300685192408,\n",
+       " 63.34496039596715,\n",
+       " 61.02711903705952,\n",
+       " 5.695907250054816,\n",
+       " 76.11437808789304,\n",
+       " 31.45519094948456,\n",
+       " 65.69890525956032,\n",
+       " 48.139395891116834,\n",
+       " 49.537190914035556,\n",
+       " 55.84744442088561,\n",
+       " 28.302821977232455,\n",
+       " 43.67811167862963]"
       ]
      },
      "execution_count": 9,
@@ -415,7 +391,7 @@
     "            normal = np.divide(normal, np.linalg.norm(normal))\n",
     "            # print(R.from_quat(stream[i, 3:]).inv().apply(normal))\n",
     "\n",
-    "            v = R.from_quat(stream[i, 3:]).apply([0, 1, 0.5])\n",
+    "            v = R.from_quat(stream[i, 3:]).apply([np.cos(0.9), np.sin(0.9), 0])\n",
     "            v = np.divide(v, np.linalg.norm(v))\n",
     "            # print(v)\n",
     "            # print(voxels[ind])\n",
