Attempting to set up c library usage

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -406,6 +406,49 @@
     "\n",
     "drill_orientation(data['pose_mastoidectomy_drill'][()], data['time'][()], v_rm['voxel_removed'][()], v_rm['time_stamp'][()])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cffi\n",
+    "import pathlib\n",
+    "\n",
+    "\"\"\" Build the CFFI Python bindings \"\"\"\n",
+    "ffi = cffi.FFI()\n",
+    "\n",
+    "this_dir = pathlib.Path().absolute()\n",
+    "h_file_name = this_dir / \"EdtReader/EdtReader.h\"\n",
+    "with open(h_file_name) as h_file:\n",
+    "    ffi.cdef(h_file.read())\n",
+    "\n",
+    "ffi.set_source(\n",
+    "    \"EDTread\",\n",
+    "    # Since you're calling a fully-built library directly, no custom source\n",
+    "    # is necessary. You need to include the .h files, though, because behind\n",
+    "    # the scenes cffi generates a .c file that contains a Python-friendly\n",
+    "    # wrapper around each of the functions.\n",
+    "    '#include \"EdtReader.h\"',\n",
+    "    # The important thing is to include the pre-built lib in the list of\n",
+    "    # libraries you're linking against:\n",
+    "    libraries=[\"EdtReader\"],\n",
+    "    library_dirs=[this_dir.as_posix()],\n",
+    "    extra_link_args=[\"-Wl,-rpath,.\"],\n",
+    ")\n",
+    "\n",
+    "ffi.compile()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import EDTread"
+   ]
   }
  ],
  "metadata": {
