change procedure duration

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -293,16 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "49.412348985672"
+       "24.344613075256348"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
     "def procedure_duration(timepts: np.ndarray):\n",
     "    return (max(timepts) - min(timepts))\n",
     "\n",
-    "procedure_duration(data['time'][()])"
+    "procedure_duration(v_rm['time_stamp'][()])"
    ]
   },
   {
