clean up data files

--- a/feature_validation/feature_engineering.ipynb
+++ b/feature_validation/feature_engineering.ipynb
@@ -27,11 +27,11 @@
     "import math\n",
     "from scipy.spatial.transform import Rotation as R\n",
     "\n",
-    "# fname = 'd4/20220302_131424.hdf5'\n",
-    "# fname = '20220408_191041.hdf5'\n",
-    "# fname = '20220408_210049.hdf5' # 3 strokes\n",
-    "# fname = '20220409_184944.hdf5' # perpendicular drill angle\n",
-    "# fname = '20220409_185037.hdf5' # varying drill angle\n",
+    "# fname = 'data/d4/20220302_131424.hdf5'\n",
+    "# fname = 'data/20220408_191041.hdf5'\n",
+    "# fname = 'data/20220408_210049.hdf5' # 3 strokes\n",
+    "# fname = 'data/20220409_184944.hdf5' # perpendicular drill angle\n",
+    "# fname = 'data/20220409_185037.hdf5' # varying drill angle\n",
     "\n",
     "# fname = 'Angles/45deg.hdf5' # 45 degree drill angle\n",
     "fname = 'Angles/90deg.hdf5' # 90 degree drill angle\n",
