editing based on basic validation

--- a/feature_validation/feature_engineering_development/feature_engineering.ipynb
+++ b/feature_validation/feature_engineering_development/feature_engineering.ipynb
@@ -29,13 +29,15 @@
     "\n",
     "# fname = '../data/d4/20220302_131424.hdf5'\n",
     "# fname = '../data/20220408_191041.hdf5'\n",
-    "# fname = '../data/20220408_210049.hdf5' # 3 strokes\n",
+    "fname = '../data/20220408_210049.hdf5' # 3 strokes\n",
     "# fname = '../data/20220409_184944.hdf5' # perpendicular drill angle\n",
     "# fname = '../data/20220409_185037.hdf5' # varying drill angle\n",
     "\n",
     "# fname = '../Angles/45deg.hdf5' # 45 degree drill angle\n",
-    "fname = '../Angles/90deg.hdf5' # 90 degree drill angle\n",
+    "# fname = '../Angles/90deg.hdf5' # 90 degree drill angle\n",
     "# fname = '../Angles/random.hdf5' # random drill angle\n",
+    "\n",
+    "# fname = '../Strokes/zero_strokes.hdf5' # 0 strokes\n",
     "\n",
     "f = h5py.File(fname, 'r')\n",
     "print('File keys', f.keys())\n",
@@ -52,16 +54,16 @@
      "output_type": "stream",
      "text": [
       "Data keys <KeysViewHDF5 ['depth', 'l_img', 'pose_main_camera', 'pose_mastoidectomy_drill', 'r_img', 'segm', 'time']>\n",
-      "(117, 7)\n",
-      "(117, 480, 640, 3)\n",
-      "(117,)\n",
+      "(127, 7)\n",
+      "(127, 480, 640, 3)\n",
+      "(127,)\n",
       "Force keys <KeysViewHDF5 ['time_stamp', 'wrench']>\n",
-      "(49581,)\n",
-      "(49581, 3)\n",
+      "(36771,)\n",
+      "(36771, 3)\n",
       "Voxels Removed keys <KeysViewHDF5 ['time_stamp', 'voxel_color', 'voxel_removed']>\n",
-      "(14813,)\n",
-      "(14813, 4)\n",
-      "(14813, 3)\n",
+      "(13657,)\n",
+      "(13657, 4)\n",
+      "(13657, 3)\n",
       "True\n"
      ]
     }
@@ -120,7 +122,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "def get_strokes(stream: np.ndarray, timepts: np.ndarray, k=6):\n",
     "    stream = stream[:, :3]\n",
@@ -196,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.        , 0.        , 0.        , 0.17338839])"
+       "array([0.        , 0.        , 0.09622728])"
       ]
      },
      "execution_count": 5,
@@ -229,7 +239,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1.33645189e-05, 5.28233733e-02, 4.69498310e-02, 1.10024546e-01])"
+       "array([1.96817789e-05, 3.67763321e-02, 7.00008367e-02])"
       ]
      },
      "execution_count": 6,
@@ -266,7 +276,7 @@
     {
      "data": {
       "text/plain": [
-       "array([    0.        ,     0.        ,     0.        , 79427.73075289])"
+       "array([    0.        ,     0.        , 93356.02700918])"
       ]
      },
      "execution_count": 7,
@@ -299,7 +309,7 @@
     {
      "data": {
       "text/plain": [
-       "24.344613075256348"
+       "17.348564624786377"
       ]
      },
      "execution_count": 8,
@@ -320,27 +330,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alexandraszewc/opt/anaconda3/lib/python3.8/site-packages/numpy/core/fromnumeric.py:3419: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/Users/alexandraszewc/opt/anaconda3/lib/python3.8/site-packages/numpy/core/_methods.py:188: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[61.008596782268086,\n",
-       " 66.98156541717697,\n",
-       " 65.00548675490555,\n",
-       " 56.84380948979859,\n",
-       " 54.86344760404819,\n",
-       " 50.46453940007697,\n",
-       " 70.87646377216953,\n",
-       " 73.54928290448379,\n",
-       " 68.03538772042023,\n",
-       " 63.29395801213295,\n",
-       " 62.5203486176826,\n",
-       " 69.24660585633075,\n",
-       " 81.23461299035532,\n",
-       " 61.04686047821386,\n",
-       " 61.87586970538422,\n",
-       " 71.4937607559396,\n",
-       " 63.713800968948505,\n",
-       " 61.07251802009014,\n",
-       " 61.56446341249139]"
+       "array([42.13148227])"
       ]
      },
      "execution_count": 9,
@@ -351,10 +353,12 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def drill_orientation(stream: np.ndarray, timepts: np.ndarray,\n",
+    "def drill_orientation(strokes: np.ndarray, stroke_times: np.ndarray,\n",
+    "                      stream: np.ndarray, timepts: np.ndarray,\n",
     "                      force_stream: np.ndarray, force_times: np.ndarray):\n",
     "\n",
     "    angles = []\n",
+    "    angle_times = []\n",
     "    normals = []\n",
     "    drill_vecs = []\n",
     "\n",
@@ -364,6 +368,8 @@
     "    for i,t in enumerate(timepts):\n",
     "        ind = np.argmin(np.abs(force_times - t))\n",
     "        if np.isclose(np.abs(force_times[ind] - t), 0) and np.linalg.norm(force_stream[ind]) > med:\n",
+    "\n",
+    "            angle_times.append(t)\n",
     "\n",
     "            normal = force_stream[ind]\n",
     "            normal = np.divide(normal, np.linalg.norm(normal))\n",
@@ -383,10 +389,18 @@
     "\n",
     "        angles.append(90 - angle)\n",
     "\n",
-    "    return angles\n",
+    "    avg_stroke_angle = []\n",
+    "    for i in range(sum(strokes)):\n",
     "\n",
-    "drill_orientation(data['pose_mastoidectomy_drill'][()], data['time'][()],\n",
-    "force['wrench'][()], force['time_stamp'][()])"
+    "        stroke_mask = [at >= stroke_times[i] and at < stroke_times[i+1] for at in angle_times]\n",
+    "        stroke_angles = np.array(angles)[stroke_mask]\n",
+    "        avg_stroke_angle.append(np.mean(stroke_angles))\n",
+    "\n",
+    "    A = np.array(avg_stroke_angle)\n",
+    "    avg_stroke_angle = A[~np.isnan(A)]\n",
+    "    return avg_stroke_angle\n",
+    "\n",
+    "drill_orientation(strokes, stroke_times, data['pose_mastoidectomy_drill'][()], data['time'][()], force['wrench'][()], force['time_stamp'][()])"
    ]
   },
   {
