debug; replace 20sec with 3 stroke

--- a/feature_validation/feature_engineering_development/feature_engineering.ipynb
+++ b/feature_validation/feature_engineering_development/feature_engineering.ipynb
@@ -122,15 +122,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_strokes(stream: np.ndarray, timepts: np.ndarray, k=6):\n",
     "    stream = stream[:, :3]\n",
@@ -185,17 +177,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def stats_per_stroke(stroke_arr: np.ndarray):\n",
+    "\n",
+    "    if not stroke_arr.any():\n",
+    "        return 0, 0, 0\n",
     "    \n",
     "    mean = np.mean(stroke_arr)\n",
     "    med_ = np.median(stroke_arr)\n",
     "    max_ = np.max(stroke_arr)\n",
     "\n",
     "    return mean, med_, max_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0, 0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats_per_stroke(np.array([]))"
    ]
   },
   {
@@ -326,17 +341,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/alexandraszewc/opt/anaconda3/lib/python3.8/site-packages/numpy/core/fromnumeric.py:3419: RuntimeWarning: Mean of empty slice.\n",
-      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-      "/Users/alexandraszewc/opt/anaconda3/lib/python3.8/site-packages/numpy/core/_methods.py:188: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "0\n",
+      "[False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "0\n",
+      "[True, True, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "2\n"
      ]
     },
     {
@@ -345,7 +362,7 @@
        "array([42.13148227])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,9 +380,11 @@
     "    drill_vecs = []\n",
     "\n",
     "    forces = force_stream[np.linalg.norm(force_stream, axis=1) > 0]\n",
+    "    if len(forces) <= 0:\n",
+    "        return np.array([])\n",
     "    med = np.median(np.linalg.norm(forces, axis=1))\n",
     "\n",
-    "    for i,t in enumerate(timepts):\n",
+    "    for i, t in enumerate(timepts):\n",
     "        ind = np.argmin(np.abs(force_times - t))\n",
     "        if np.isclose(np.abs(force_times[ind] - t), 0) and np.linalg.norm(force_stream[ind]) > med:\n",
     "\n",
@@ -375,7 +394,7 @@
     "            normal = np.divide(normal, np.linalg.norm(normal))\n",
     "            normals.append(normal)\n",
     "\n",
-    "            v = R.from_quat(stream[i, 3:]).apply([-1,0,0])\n",
+    "            v = R.from_quat(stream[i, 3:]).apply([-1, 0, 0])\n",
     "            v = np.divide(v, np.linalg.norm(v))\n",
     "            drill_vecs.append(v)\n",
     "\n",
@@ -392,7 +411,8 @@
     "    avg_stroke_angle = []\n",
     "    for i in range(sum(strokes)):\n",
     "\n",
-    "        stroke_mask = [at >= stroke_times[i] and at < stroke_times[i+1] for at in angle_times]\n",
+    "        stroke_mask = [at >= stroke_times[i] and at <\n",
+    "                       stroke_times[i+1] for at in angle_times]\n",
     "        stroke_angles = np.array(angles)[stroke_mask]\n",
     "        avg_stroke_angle.append(np.mean(stroke_angles))\n",
     "\n",
