--- a/feature_validation/feature_engineering_development/feature_engineering.ipynb
+++ b/feature_validation/feature_engineering_development/feature_engineering.ipynb
@@ -414,7 +414,7 @@
     "        stroke_mask = [at >= stroke_times[i] and at <\n",
     "                       stroke_times[i+1] for at in angle_times]\n",
     "        stroke_angles = np.array(angles)[stroke_mask]\n",
-    "        avg_stroke_angle.append(np.mean(stroke_angles))\n",
+    "        avg_stroke_angle.append(np.mean(stroke_angles) if sum(stroke_mask) > 0 else np.nan)\n",
     "\n",
     "    A = np.array(avg_stroke_angle)\n",
     "    avg_stroke_angle = A[~np.isnan(A)]\n",
